--- a/ansible/install_applications/roles/infra_blocky_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra_blocky_deploy/app/deploy/networkPolicies.yaml.j2
@@ -62,3 +62,29 @@ spec:
           podSelector:
             matchLabels:
               {{ grafana.labels_def | to_nice_yaml() | indent(14) }}
+
+---
+
+kind: NetworkPolicy
+apiVersion: networking.k8s.io/v1
+metadata:
+  name: allow-to-redis
+  namespace: {{ blocky.namespace }}
+  labels:
+    {{ blocky_redis.labels_def | to_nice_yaml() | indent(4) }}
+    {{ blocky_redis.labels_desc | to_nice_yaml() | indent(4) }}
+spec:
+  types: [Ingress]
+
+  podSelector:
+    matchLabels:
+      {{ blocky_redis.labels_def | to_nice_yaml() | indent(6) }}
+
+  ingress:
+    # Allow from blocky
+    - ports:
+        - port: redis
+      from:
+        - podSelector:
+            matchLabels:
+              {{ blocky.labels_def | to_nice_yaml() | indent(14) }}
