--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -359,6 +359,16 @@ watchers:
       - .*-alpine3\.1[0-4]
       - ^[0-9]\..*
       - ^1[0-3]\..*
+  - name: "Blocky Redis"
+    type: docker_registry
+    repo: {{ blocky_redis.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ blocky_redis.base_image.name }}
+    tag: {{ blocky_redis.base_image.tag }}
+    includes:
+      - "[6-9]\\.[0-9]+\\.[0-9]+.*alpine[0-9]+\\.[0-9][0-9]"
+    excludes:
+      - .*alpine3\.1[0-4]
+      - ^6\.[0-1]\.
   - type: docker_registry
     repo: {{ gotify.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
     image: {{ gotify.base_image.name }}
@@ -759,3 +769,13 @@ watchers:
     excludes:
       - ^0\..*
       - ^1\.[0-4]\..*
+  - name: "Paperless Redis"
+    type: docker_registry
+    repo: {{ paperless_redis.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ paperless_redis.base_image.name }}
+    tag: {{ paperless_redis.base_image.tag }}
+    includes:
+      - "[6-9]\\.[0-9]+\\.[0-9]+.*alpine[0-9]+\\.[0-9][0-9]"
+    excludes:
+      - .*alpine3\.1[0-4]
+      - ^6\.[0-1]\.
