Migrate kubernetes_dns_lb_ip to blocky

--- a/ansible/install_applications/roles/infra_blocky_deploy/app/deploy/blocky-service-dns.yaml.j2
+++ b/ansible/install_applications/roles/infra_blocky_deploy/app/deploy/blocky-service-dns.yaml.j2
@@ -10,9 +10,7 @@ metadata:
     metallb.universe.tf/allow-shared-ip: blocky
 spec:
   type: LoadBalancer
-  # TODO
-  #loadBalancerIP: {{ kubernetes_dns_lb_ip }}
-  loadBalancerIP: 192.168.100.25
+  loadBalancerIP: {{ kubernetes_dns_lb_ip }}
   externalTrafficPolicy: Local
   ports:
     - name: dns-udp
@@ -36,9 +34,7 @@ metadata:
     metallb.universe.tf/allow-shared-ip: blocky
 spec:
   type: LoadBalancer
-  # TODO
-  #loadBalancerIP: {{ kubernetes_dns_lb_ip }}
-  loadBalancerIP: 192.168.100.25
+  loadBalancerIP: {{ kubernetes_dns_lb_ip }}
   externalTrafficPolicy: Local
   ports:
     - name: dns
