Fix broken watchers

--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -603,11 +603,11 @@ watchers:
       - ^v1\.[0-8]\..*
   - type: github_commit
     repo: Neraud/release-watcher
-    branch: master
+    branch: main
     commit: {{ release_watcher.repo.version }}
   - type: github_commit
     repo: mdlayher/apcupsd_exporter
-    branch: master
+    branch: main
     commit: {{ apcups_exporter.repo.version }}
 
 
