Fix home-zwavejs2mqtt still resetting the adapter in 6.6.0+

--- a/ansible/install_applications/roles/home_zwavejs2mqtt_deploy/app/config/settings.json.j2
+++ b/ansible/install_applications/roles/home_zwavejs2mqtt_deploy/app/config/settings.json.j2
@@ -36,6 +36,8 @@
         "port": "{{ zwavejs2mqtt.serial_device }}",
         "commandsTimeout": 30,
         "networkKey": "{{ zwavejs2mqtt.zwave_network_key }}",
+        {# Disable soft reset to avoid issues with remote adapters (https://github.com/zwave-js/zwavejs2mqtt/issues/2086 & https://github.com/zwave-js/node-zwave-js/issues/3777) #}
+        "enableSoftReset": false,
         "logLevel": "warn",
         "logToFile": false,
         "serverEnabled": true,
