Fix ingress, add missing tcp/udp streams

--- a/ansible/install_infra/roles/kubernetes_nginx_ingress_deploy/templates/mandatory.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_nginx_ingress_deploy/templates/mandatory.yaml.j2
@@ -413,6 +413,8 @@ spec:
         - --controller-class=k8s.io/ingress-nginx
         - --ingress-class=nginx
         - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
+        - --tcp-services-configmap=ingress-nginx/ingress-nginx-tcp-services
+        - --udp-services-configmap=ingress-nginx/ingress-nginx-udp-services
         - --validating-webhook=:8443
         - --validating-webhook-certificate=/usr/local/certificates/cert
         - --validating-webhook-key=/usr/local/certificates/key
