Fix deprecation warning in home-mosquitto

--- a/ansible/install_applications/roles/home_mosquitto_deploy/app/config/mosquitto.conf.j2
+++ b/ansible/install_applications/roles/home_mosquitto_deploy/app/config/mosquitto.conf.j2
@@ -9,7 +9,7 @@
 # =================================================================
 # Default listener
 # =================================================================
-port {{ listener.port }}
+listener {{ listener.port }}
 {% else %}
 # =================================================================
 # Extra listener
