Disable unused networkpolicy for roomassistant to mosquitto

--- a/ansible/install_applications/roles/home_mosquitto_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/home_mosquitto_deploy/app/deploy/networkPolicies.yaml.j2
@@ -41,12 +41,13 @@ spec:
               {{ homeassistant.labels_def | to_nice_yaml() | indent(14) }}
 
         # Allow from roomassistant
-        - namespaceSelector:
-            matchLabels:
-              name: {{ roomassistant.namespace }}
-          podSelector:
-            matchLabels:
-              {{ roomassistant.labels_def | to_nice_yaml() | indent(14) }}
+        # Not used, roomassistant uses the host network and uses the ingress
+        #- namespaceSelector:
+        #    matchLabels:
+        #      name: {{ roomassistant.namespace }}
+        #  podSelector:
+        #    matchLabels:
+        #      {{ roomassistant.labels_def | to_nice_yaml() | indent(14) }}
 
         # Allow from zigbee2mqtt
         - namespaceSelector:
