Add healthcheck on home-roomassistant

--- a/ansible/install_applications/roles/home_roomassistant_deploy/app/config/local.yaml.j2
+++ b/ansible/install_applications/roles/home_roomassistant_deploy/app/config/local.yaml.j2
@@ -2,6 +2,7 @@
 
 global:
   instanceName: {{ roomassistant.config.instance_name }}
+  apiPort: 6415
   integrations:
 {% if roomassistant.config.integrations.homeassistant %}
     - homeAssistant
