--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -762,3 +762,13 @@ watchers:
     excludes:
       - .*alpine3\.1[0-4]
       - ^6\.[0-1]\.
+  - name: OliveTin
+    type: docker_registry
+    repo: {{ _olivetin_var_loader.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ _olivetin_var_loader.base_image.name }}
+    tag: {{ _olivetin_var_loader.base_image.tag }}
+    includes:
+      - 20[0-9][0-9]-[0-9][0-9]-[0-9][0-9]-amd64
+    excludes:
+      - ^202[0-1].*
+      - ^2022-0[0-1].*
