--- a/ansible/install_applications/roles/home_mosquitto_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/home_mosquitto_deploy/app/deploy/networkPolicies.yaml.j2
@@ -40,14 +40,16 @@ spec:
             matchLabels:
               {{ homeassistant.labels_def | to_nice_yaml() | indent(14) }}
 
+        {#
         # Allow from roomassistant
         # Not used, roomassistant uses the host network and uses the ingress
-        #- namespaceSelector:
-        #    matchLabels:
-        #      name: {{ roomassistant.namespace }}
-        #  podSelector:
-        #    matchLabels:
-        #      {{ roomassistant.labels_def | to_nice_yaml() | indent(14) }}
+        - namespaceSelector:
+            matchLabels:
+              name: {{ roomassistant.namespace }}
+          podSelector:
+            matchLabels:
+              {{ roomassistant.labels_def | to_nice_yaml() | indent(14) }}
+        #}
 
         # Allow from zigbee2mqtt
         - namespaceSelector:
