--- a/ansible/install_applications/roles/monitoring_grafana_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_grafana_deploy/app/deploy/statefulSet.yaml.j2
@@ -122,7 +122,8 @@ spec:
       - name: cluster-ca-volume
         secret:
           secretName: cluster-ca
-      - emptyDir: {}
+      - emptyDir:
+          medium: Memory
         name: tmp-plugins
       imagePullSecrets:
       - name: docker-config
