--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/clusterRole.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/clusterRole.yaml.j2
@@ -14,6 +14,7 @@ rules:
   - alertmanagerconfigs
   - prometheuses
   - prometheuses/finalizers
+  - prometheuses/status
   - thanosrulers
   - thanosrulers/finalizers
   - servicemonitors
