Update monitoring-release-watcher to write missed releases to files

--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/config.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/config.yaml.j2
@@ -23,3 +23,9 @@ sources:
 outputs:
   - type: prometheus_http
     port: 8080
+  - type: yaml_file
+    path: /tmp/out_missing.yaml
+    displayUpToDate: no
+  - type: yaml_file
+    path: /tmp/out_all.yaml
+    displayUpToDate: yes
