--- a/ansible/install_applications/roles/tool_paperless_deploy/app/deploy/paperless-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/tool_paperless_deploy/app/deploy/paperless-statefulSet.yaml.j2
@@ -40,6 +40,8 @@ spec:
         env:
         - name: PAPERLESS_DEBUG
           value: "false"
+        - name: PAPERLESS_PORT
+          value: "8000"
         - name: PAPERLESS_ENABLE_HTTP_REMOTE_USER
           value: "true"
         - name: PAPERLESS_LOGGING_DIR
