--- a/ansible/install_applications/roles/tool_paperless_deploy/app/deploy/paperless-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/tool_paperless_deploy/app/deploy/paperless-statefulSet.yaml.j2
@@ -46,9 +46,7 @@ spec:
           value: "true"
         - name: PAPERLESS_LOGGING_DIR
           value: "/tmp/log/"
-        - name: PAPERLESS_ALLOWED_HOSTS
-          value: "paperless.tool.intra.{{ web_base_domain }}"
-        - name: PAPERLESS_CORS_ALLOWED_HOSTS
+        - name: PAPERLESS_URL
           value: "https://paperless.tool.intra.{{ web_base_domain }}"
         - name: PAPERLESS_ADMIN_USER
           valueFrom:
