--- a/ansible/install_applications/roles/tool_syncthing_deploy/app/deploy/syncthing-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/tool_syncthing_deploy/app/deploy/syncthing-statefulSet.yaml.j2
@@ -81,7 +81,7 @@ spec:
         image: "{{ syncthing.conf_injection_private_image | image_full_name }}"
         imagePullPolicy: Always
         env:
-{% for conf in syncthong_configs %}
+{% for conf in syncthing.configs %}
           - name: SYNCTHING_CONF_{{ conf.category }}_{{ conf.key }}
             value: "{{ conf.value }}"
 {% endfor %}
