--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -338,7 +338,7 @@ watchers:
       - 'v[0-9]+\.[0-9]+'
     excludes:
       - v0\.[0-9]$
-      - v0\.1[0-7]$
+      - v0\.1[0-8]$
   - name: Blocky PostgreSQL
     type: docker_registry
     repo: {{ blocky_pgsql.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
@@ -347,7 +347,7 @@ watchers:
     includes:
       - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
     excludes:
-      - .*-alpine3\.1[0-4]
+      - .*-alpine3\.1[0-5]
       - ^[0-9]\..*
       - ^1[0-3]\..*
   - name: "Blocky Redis"
@@ -356,10 +356,10 @@ watchers:
     image: {{ blocky_redis.base_image.name }}
     tag: {{ blocky_redis.base_image.tag }}
     includes:
-      - "[6-9]\\.[0-9]+\\.[0-9]+.*alpine[0-9]+\\.[0-9][0-9]"
+      - "[0-9]+\\.[0-9]+\\.[0-9]+.*alpine[0-9]+\\.[0-9][0-9]"
     excludes:
-      - .*alpine3\.1[0-4]
-      - ^6\.[0-1]\.
+      - .*alpine3\.1[0-5]
+      - ^[0-6]\.
   - type: docker_registry
     repo: {{ gotify.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
     image: {{ gotify.base_image.name }}
