--- a/ansible/install_infra/roles/kubernetes_master_cni_deploy/templates/calico/calico.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_master_cni_deploy/templates/calico/calico.yaml.j2
@@ -4154,6 +4154,14 @@ rules:
       - pods/status
     verbs:
       - patch
+  # Used for creating service account tokens to be used by the CNI plugin
+  - apiGroups: [""]
+    resources:
+      - serviceaccounts/token
+    resourceNames:
+      - calico-node
+    verbs:
+      - create
   # Calico monitors various CRDs for config.
   - apiGroups: ["crd.projectcalico.org"]
     resources:
@@ -4301,7 +4309,7 @@ spec:
         # It can be deleted if this is a fresh installation, or if you have already
         # upgraded to use calico-ipam.
         - name: upgrade-ipam
-          image: docker.io/calico/cni:v3.23.1
+          image: docker.io/calico/cni:v3.23.2
           command: ["/opt/cni/bin/calico-ipam", "-upgrade"]
           envFrom:
           - configMapRef:
@@ -4328,7 +4336,7 @@ spec:
         # This container installs the CNI binaries
         # and CNI network config file on each node.
         - name: install-cni
-          image: docker.io/calico/cni:v3.23.1
+          image: docker.io/calico/cni:v3.23.2
           command: ["/opt/cni/bin/install"]
           envFrom:
           - configMapRef:
@@ -4371,7 +4379,7 @@ spec:
         # container programs network policy and routes on each
         # host.
         - name: calico-node
-          image: docker.io/calico/node:v3.23.1
+          image: docker.io/calico/node:v3.23.2
           envFrom:
           - configMapRef:
               # Allow KUBERNETES_SERVICE_HOST and KUBERNETES_SERVICE_PORT to be overridden for eBPF mode.
@@ -4591,7 +4599,7 @@ spec:
       priorityClassName: system-cluster-critical
       containers:
         - name: calico-kube-controllers
-          image: docker.io/calico/kube-controllers:v3.23.1
+          image: docker.io/calico/kube-controllers:v3.23.2
           env:
             # Choose which controllers to run.
             - name: ENABLED_CONTROLLERS
