--- a/ansible/install_applications/roles/infra_zonemta_deploy/app/deploy/mongodb-secret-init.yaml.j2
+++ b/ansible/install_applications/roles/infra_zonemta_deploy/app/deploy/mongodb-secret-init.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: zonemta-mongo-init
+  name: mongo-init
   namespace: "{{ zonemta.namespace }}"
   labels:
     {{ zonemta_mongo.labels_def | to_nice_yaml() | indent(4) }}
