--- a/ansible/install_applications/roles/infra_zonemta_deploy/app/deploy/zonemta-deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra_zonemta_deploy/app/deploy/zonemta-deployment.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: zonemta-server
+  name: zonemta
   namespace: "{{ zonemta.namespace }}"
   labels:
     {{ zonemta.labels_def | to_nice_yaml() | indent(4) }}
