--- a/ansible/install_applications/roles/infra_zonemta_deploy/app/deploy/mongdb-service.yaml.j2
+++ b/ansible/install_applications/roles/infra_zonemta_deploy/app/deploy/mongdb-service.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: zonemta-mongo
+  name: mongo
   namespace: "{{ zonemta.namespace }}"
   labels:
     {{ zonemta_mongo.labels_def | to_nice_yaml() | indent(4) }}
