--- a/ansible/install_applications/roles/infra_zonemta_deploy/app/deploy/redis-service.yaml.j2
+++ b/ansible/install_applications/roles/infra_zonemta_deploy/app/deploy/redis-service.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: zonemta-redis
+  name: redis
   namespace: "{{ zonemta.namespace }}"
   labels:
     {{ zonemta_redis.labels_def | to_nice_yaml() | indent(4) }}
