--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -528,12 +528,10 @@ watchers:
     image: {{ fluentd.base_image.name }}
     tag: {{ fluentd.base_image.tag }}
     includes:
-      - v[1-9]\.[0-9]+\.[0-9]+-debian.*
+      - v[0-9]+\.[0-9]+\.[0-9]+-debian-amd64.*
     excludes:
-      - .*(armhf|arm64).*
       - v1\.[0-9]\..*
-      - v1\.1[0-3]\..*
-      - v1\.14\.[0-5]-.*
+      - v1\.1[0-4]\..*
   - type: github_tag
     repo: uken/fluent-plugin-elasticsearch
     tag: v{{ fluentd.plugins.elasticsearch.version }}
