--- a/ansible/install_applications/roles/logging_kibana_deploy/app/config/opensearch_dashboards.yml.j2
+++ b/ansible/install_applications/roles/logging_kibana_deploy/app/config/opensearch_dashboards.yml.j2
@@ -1,10 +1,17 @@
+---
+# Copyright OpenSearch Contributors
+# SPDX-License-Identifier: Apache-2.0
+
+# Description:
+# Default configuration for OpenSearch Dashboards
+
 # OpenSearch Dashboards is served by a back end server. This setting specifies the port to use.
-#server.port: 5601
+# server.port: 5601
 
 # Specifies the address to which the OpenSearch Dashboards server will bind. IP addresses and host names are both valid values.
 # The default is 'localhost', which usually means remote machines will not be able to connect.
 # To allow connections from remote users, set this parameter to a non-loopback address.
-server.host: "0"
+server.host: '0.0.0.0'
 
 # Enables you to specify a path to mount OpenSearch Dashboards at if you are running behind a proxy.
 # Use the `server.rewriteBasePath` setting to tell OpenSearch Dashboards if it should remove the basePath
@@ -21,7 +28,7 @@ server.rewriteBasePath: true
 {% endif %}
 
 # The maximum payload size in bytes for incoming server requests.
-#server.maxPayloadBytes: 1048576
+# server.maxPayloadBytes: 1048576
 
 # The OpenSearch Dashboards server's name.  This is used for display purposes.
 server.name: OpenSearch Dashboards
@@ -34,17 +41,17 @@ opensearch.hosts: [ "https://{{ elasticsearch.servername }}:9200" ]
 opensearchDashboards.index: "{{ kibana.elasticsearch.index }}"
 
 # The default application to load.
-#opensearchDashboards.defaultAppId: "home"
+# opensearchDashboards.defaultAppId: "home"
 
 # Setting for an optimized healthcheck that only uses the local OpenSearch node to do Dashboards healthcheck.
 # This settings should be used for large clusters or for clusters with ingest heavy nodes.
 # It allows Dashboards to only healthcheck using the local OpenSearch node rather than fan out requests across all nodes.
-#  
+#
 # It requires the user to create an OpenSearch node attribute with the same name as the value used in the setting
 # This node attribute should assign all nodes of the same cluster an integer value that increments with each new cluster that is spun up
-# e.g. in opensearch.yml file you would set the value to a setting using node.attr.cluster_id: 
+# e.g. in opensearch.yml file you would set the value to a setting using node.attr.cluster_id:
 # Should only be enabled if there is a corresponding node attribute created in your OpenSearch config that matches the value here
-#opensearch.optimizedHealthcheckId: "cluster_id"
+# opensearch.optimizedHealthcheckId: "cluster_id"
 
 # If your OpenSearch is protected with basic authentication, these settings provide
 # the username and password that the OpenSearch Dashboards server uses to perform maintenance on the OpenSearch Dashboards
@@ -55,15 +62,15 @@ opensearch.password: {{ kibana.elasticsearch.password }}
 
 # Enables SSL and paths to the PEM-format SSL certificate and SSL key files, respectively.
 # These settings enable SSL for outgoing requests from the OpenSearch Dashboards server to the browser.
-#server.ssl.enabled: false
-#server.ssl.certificate: /path/to/your/server.crt
-#server.ssl.key: /path/to/your/server.key
+# server.ssl.enabled: false
+# server.ssl.certificate: /path/to/your/server.crt
+# server.ssl.key: /path/to/your/server.key
 
 # Optional settings that provide the paths to the PEM-format SSL certificate and key files.
 # These files are used to verify the identity of OpenSearch Dashboards to OpenSearch and are required when
 # xpack.security.http.ssl.client_authentication in OpenSearch is set to required.
-#opensearch.ssl.certificate: /path/to/your/client.crt
-#opensearch.ssl.key: /path/to/your/client.key
+# opensearch.ssl.certificate: /path/to/your/client.crt
+# opensearch.ssl.key: /path/to/your/client.key
 
 # Optional setting that enables you to specify a path to the PEM file for the certificate
 # authority for your OpenSearch instance.
@@ -74,55 +81,55 @@ opensearch.ssl.verificationMode: full
 
 # Time in milliseconds to wait for OpenSearch to respond to pings. Defaults to the value of
 # the opensearch.requestTimeout setting.
-#opensearch.pingTimeout: 1500
+# opensearch.pingTimeout: 1500
 
 # Time in milliseconds to wait for responses from the back end or OpenSearch. This value
 # must be a positive integer.
-#opensearch.requestTimeout: 30000
+# opensearch.requestTimeout: 30000
 
 # List of OpenSearch Dashboards client-side headers to send to OpenSearch. To send *no* client-side
 # headers, set this value to [] (an empty list).
-opensearch.requestHeadersWhitelist: [ authorization,securitytenant ]
+# opensearch.requestHeadersWhitelist: [ authorization ]
 
 # Header names and values that are sent to OpenSearch. Any custom headers cannot be overwritten
 # by client-side headers, regardless of the opensearch.requestHeadersWhitelist configuration.
-#opensearch.customHeaders: {}
+# opensearch.customHeaders: {}
 
 # Time in milliseconds for OpenSearch to wait for responses from shards. Set to 0 to disable.
-#opensearch.shardTimeout: 30000
+# opensearch.shardTimeout: 30000
 
 # Logs queries sent to OpenSearch. Requires logging.verbose set to true.
-#opensearch.logQueries: false
+# opensearch.logQueries: false
 
 # Specifies the path where OpenSearch Dashboards creates the process ID file.
-#pid.file: /var/run/opensearchDashboards.pid
+# pid.file: /var/run/opensearchDashboards.pid
 
 # Enables you to specify a file where OpenSearch Dashboards stores log output.
-#logging.dest: stdout
+# logging.dest: stdout
 
 # Set the value of this setting to true to suppress all logging output.
-#logging.silent: false
+# logging.silent: false
 
 # Set the value of this setting to true to suppress all logging output other than error messages.
-#logging.quiet: false
+# logging.quiet: false
 
 # Set the value of this setting to true to log all events, including system usage information
 # and all requests.
-#logging.verbose: false
+# logging.verbose: false
 
 # Set the interval in milliseconds to sample system and process performance
 # metrics. Minimum is 100ms. Defaults to 5000.
-#ops.interval: 5000
+# ops.interval: 5000
 
 # Specifies locale to be used for all localizable strings, dates and number formats.
 # Supported languages are the following: English - en , by default , Chinese - zh-CN .
-#i18n.locale: "en"
+# i18n.locale: "en"
 
 # Set the allowlist to check input graphite Url. Allowlist is the default check list.
-#vis_type_timeline.graphiteAllowedUrls: ['https://www.hostedgraphite.com/UID/ACCESS_KEY/graphite']
+# vis_type_timeline.graphiteAllowedUrls: ['https://www.hostedgraphite.com/UID/ACCESS_KEY/graphite']
 
-# Set the blocklist to check input graphite Url. Blocklist is an IP list. 
-# Below is an example for reference 
+# Set the blocklist to check input graphite Url. Blocklist is an IP list.
+# Below is an example for reference
 # vis_type_timeline.graphiteBlockedIPs: [
 #  //Loopback
 #  '127.0.0.0/8',
@@ -151,20 +158,24 @@ opensearch.requestHeadersWhitelist: [ authorization,securitytenant ]
 #  '2001:db8::/32',
 #  'ff00::/8',
 # ]
-#vis_type_timeline.graphiteBlockedIPs: []
+# vis_type_timeline.graphiteBlockedIPs: []
 
 # opensearchDashboards.branding:
-  # logo:
-    # defaultUrl: ""
-    # darkModeUrl: ""
-  # mark:
-    # defaultUrl: ""
-    # darkModeUrl: ""
-  # loadingLogo: 
-    # defaultUrl: ""
-    # darkModeUrl: ""
-  # faviconUrl: ""
-  # applicationTitle: ""
+#   logo:
+#     defaultUrl: ""
+#     darkModeUrl: ""
+#   mark:
+#     defaultUrl: ""
+#     darkModeUrl: ""
+#   loadingLogo:
+#     defaultUrl: ""
+#     darkModeUrl: ""
+#   faviconUrl: ""
+#   applicationTitle: ""
+
+# Set the value of this setting to true to capture region blocked warnings and errors
+# for your map rendering services.
+# map.showRegionBlockedWarning: false%
 
 {% if kibana.multitenancy.enabled %}
 opensearch_security.multitenancy.enabled: true
@@ -176,4 +187,4 @@ opensearch_security.multitenancy.enable_filter: false
 opensearch_security.multitenancy.enabled: false
 {% endif %}
 
-opensearch_security.readonly_mode.roles: ["kibana_read_only"]
+opensearch_security.readonly_mode.roles: [kibana_read_only]
