--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -762,10 +762,10 @@ watchers:
     image: {{ paperless_redis.base_image.name }}
     tag: {{ paperless_redis.base_image.tag }}
     includes:
-      - "[6-9]\\.[0-9]+\\.[0-9]+.*alpine[0-9]+\\.[0-9][0-9]"
+      - ^[0-9]+\.[0-9]+\.[0-9]+.*alpine[0-9]+\.[0-9][0-9]
     excludes:
-      - .*alpine3\.1[0-4]
-      - ^6\.[0-1]\.
+      - .*alpine3\.1[0-5]
+      - ^[0-6]\.
   - name: OliveTin
     type: docker_registry
     repo: {{ _olivetin_var_loader.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
