--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -746,6 +746,40 @@ watchers:
   ################
   # Apps : Tools #
   ################
+  - name: Nextcloud
+    type: docker_registry
+    repo: {{ nextcloud.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ nextcloud.base_image.name }}
+    tag: {{ nextcloud.base_image.tag }}
+    includes:
+      - ^[0-9]+\.[0-9]+\.[0-9]+-apache
+    excludes:
+      - ^[0-9]\..*
+      - ^1[0-9]\..*
+      - ^2[0-3]\..*
+  - name: "Nextcloud MySQL"
+    type: docker_registry
+    repo: {{ nextcloud_mysql.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ nextcloud_mysql.base_image.name }}
+    tag: {{ nextcloud_mysql.base_image.tag }}
+    includes:
+      - ^[0-9]\.[0-9]+\.[0-9]+-debian
+    excludes:
+      - .*rc.*
+      - ^[0-7]\..*
+      - ^8\.0\.[0-9]$
+      - ^8\.0\.1[0-9]$
+      - ^8\.0\.2[0-8]$
+  - name: "Nextcloud Redis"
+    type: docker_registry
+    repo: {{ nextcloud_redis.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ nextcloud_redis.base_image.name }}
+    tag: {{ nextcloud_redis.base_image.tag }}
+    includes:
+      - ^[0-9]+\.[0-9]+\.[0-9]+.*alpine[0-9]+\.[0-9][0-9]
+    excludes:
+      - .*alpine3\.1[0-5]
+      - ^[0-6]\.
   - name: Paperless-ngx
     type: docker_registry
     repo: {{ _paperless_var_loader.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
