--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -757,6 +757,10 @@ watchers:
       - ^[0-9]\..*
       - ^1[0-9]\..*
       - ^2[0-3]\..*
+  - name: Nextcloud Tasks
+    type: github_release
+    repo: {{ nextcloud.applications.tasks.repo }}
+    release: {{ nextcloud.applications.tasks.version }}
   - name: "Nextcloud MySQL"
     type: docker_registry
     repo: {{ nextcloud_mysql.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
