Run nextcloud as www-data

--- a/ansible/install_applications/roles/tool_nextcloud_deploy/app/deploy/nextcloud-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/tool_nextcloud_deploy/app/deploy/nextcloud-statefulSet.yaml.j2
@@ -122,8 +122,8 @@ spec:
         - containerPort: 8080
           name: web
         securityContext:
-        #  runAsNonRoot: true
-        #  runAsUser: 33 # www-data
+          runAsNonRoot: true
+          runAsUser: 33 # www-data
           readOnlyRootFilesystem: true
         readinessProbe:
           httpGet:
